--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -5614,29 +5614,26 @@ span.moj-header__link:hover {
   padding-left: 0;
   padding-right: 0; }
 
-.moj-pagination__item--prev .moj-pagination__link:before, .moj-pagination__item--prev .moj-pagination__link:after,
-.moj-pagination__item--next .moj-pagination__link:before,
+.moj-pagination__item--prev .moj-pagination__link:before,
 .moj-pagination__item--next .moj-pagination__link:after {
-  background-image: url(/assets/images/icon-pagination.svg);
-  background-repeat: no-repeat;
-  background-size: 22px 36px;
-  background-position: 0 0;
   display: inline-block;
-  height: 18px;
-  vertical-align: middle;
-  position: relative;
-  top: -1px;
-  width: 11px; }
+  height: 10px;
+  width: 10px;
+  border-style: solid;
+  color: #0b0c0c;
+  background: transparent;
+  -webkit-transform: rotate(-45deg);
+  -ms-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+  content: ""; }
 
 .moj-pagination__item--prev .moj-pagination__link:before {
-  background-position: 0 0;
-  content: "";
-  margin-right: 10px; }
+  border-width: 3px 0 0 3px;
+  margin-right: 5px; }
 
 .moj-pagination__item--next .moj-pagination__link:after {
-  background-position: -11px -18px;
-  content: "";
-  margin-left: 10px; }
+  border-width: 0 3px 3px 0;
+  margin-left: 5px; }
 
 .moj-pagination__link {
   display: block;
