--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -673,25 +673,29 @@
       padding-top: 50px; } }
 
 .govuk-width-container {
-  max-width: 1800px;
-  margin: 0 15px; }
+  max-width: 1220px;
+  margin-right: 15px;
+  margin-left: 15px; }
   @supports (margin: max(calc(0px))) {
     .govuk-width-container {
       margin-right: max(15px, calc(15px + env(safe-area-inset-right)));
       margin-left: max(15px, calc(15px + env(safe-area-inset-left))); } }
   @media (min-width: 40.0625em) {
     .govuk-width-container {
-      margin: 0 30px; }
+      margin-right: 30px;
+      margin-left: 30px; }
       @supports (margin: max(calc(0px))) {
         .govuk-width-container {
           margin-right: max(30px, calc(15px + env(safe-area-inset-right)));
           margin-left: max(30px, calc(15px + env(safe-area-inset-left))); } } }
-  @media (min-width: 1860px) {
+  @media (min-width: 1280px) {
     .govuk-width-container {
-      margin: 0 auto; }
+      margin-right: auto;
+      margin-left: auto; }
       @supports (margin: max(calc(0px))) {
         .govuk-width-container {
-          margin: 0 auto; } } }
+          margin-right: auto;
+          margin-left: auto; } } }
 
 .govuk-accordion {
   margin-bottom: 20px; }
@@ -1168,12 +1172,10 @@
   font-size: 1.125rem;
   line-height: 1;
   display: -webkit-inline-box;
-  display: -webkit-inline-flex;
   display: -ms-inline-flexbox;
   display: inline-flex;
   min-height: auto;
   -webkit-box-pack: center;
-  -webkit-justify-content: center;
   -ms-flex-pack: center;
   justify-content: center; }
   @media (min-width: 40.0625em) {
@@ -1189,10 +1191,8 @@
 .govuk-button__start-icon {
   margin-left: 5px;
   vertical-align: middle;
-  -webkit-flex-shrink: 0;
   -ms-flex-negative: 0;
   flex-shrink: 0;
-  -webkit-align-self: center;
   -ms-flex-item-align: center;
   align-self: center; }
   @media (min-width: 48.0625em) {
@@ -2200,14 +2200,6 @@
   box-shadow: 0 -2px #ffdd00, 0 4px #0b0c0c;
   text-decoration: none; }
 
-.govuk-footer__inline-list .govuk-footer__link,
-.govuk-footer__list .govuk-footer__link {
-  text-decoration: none; }
-  .govuk-footer__inline-list .govuk-footer__link:hover:not(:focus), .govuk-footer__inline-list .govuk-footer__link:active:not(:focus),
-  .govuk-footer__list .govuk-footer__link:hover:not(:focus),
-  .govuk-footer__list .govuk-footer__link:active:not(:focus) {
-    text-decoration: underline; }
-
 .govuk-footer__section-break {
   margin: 0;
   margin-bottom: 30px;
@@ -2219,20 +2211,16 @@
 
 .govuk-footer__meta {
   display: -webkit-box;
-  display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
   margin-right: -15px;
   margin-left: -15px;
-  -webkit-flex-wrap: wrap;
   -ms-flex-wrap: wrap;
   flex-wrap: wrap;
   -webkit-box-align: end;
-  -webkit-align-items: flex-end;
   -ms-flex-align: end;
   align-items: flex-end;
   -webkit-box-pack: center;
-  -webkit-justify-content: center;
   -ms-flex-pack: center;
   justify-content: center; }
 
@@ -2243,12 +2231,10 @@
 
 .govuk-footer__meta-item--grow {
   -webkit-box-flex: 1;
-  -webkit-flex: 1;
   -ms-flex: 1;
   flex: 1; }
   @media (max-width: 40.0525em) {
     .govuk-footer__meta-item--grow {
-      -webkit-flex-basis: 320px;
       -ms-flex-preferred-size: 320px;
       flex-basis: 320px; } }
 
@@ -2304,12 +2290,10 @@
 
 .govuk-footer__navigation {
   display: -webkit-box;
-  display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
   margin-right: -15px;
   margin-left: -15px;
-  -webkit-flex-wrap: wrap;
   -ms-flex-wrap: wrap;
   flex-wrap: wrap; }
 
@@ -2320,22 +2304,18 @@
   margin-left: 15px;
   vertical-align: top;
   -webkit-box-flex: 1;
-  -webkit-flex-grow: 1;
   -ms-flex-positive: 1;
   flex-grow: 1;
-  -webkit-flex-shrink: 1;
   -ms-flex-negative: 1;
   flex-shrink: 1; }
   @media (max-width: 48.0525em) {
     .govuk-footer__section {
-      -webkit-flex-basis: 200px;
       -ms-flex-preferred-size: 200px;
       flex-basis: 200px; } }
 
 @media (min-width: 48.0625em) {
   .govuk-footer__section:first-child:nth-last-child(2) {
     -webkit-box-flex: 2;
-    -webkit-flex-grow: 2;
     -ms-flex-positive: 2;
     flex-grow: 2; } }
 
@@ -4978,13 +4958,13 @@
   border-bottom: 10px solid #1d70b8; }
 
 .moj-header__container {
-  max-width: 1800px;
+  max-width: 1220px;
   margin: 0 15px;
   position: relative; }
   @media (min-width: 40.0625em) {
     .moj-header__container {
       margin: 0 30px; } }
-  @media (min-width: 1860px) {
+  @media (min-width: 1280px) {
     .moj-header__container {
       margin: 0 auto; } }
   .moj-header__container:after {
@@ -5147,7 +5127,7 @@ span.moj-header__link:hover {
     clear: both; }
 
 .moj-identity-bar__container {
-  max-width: 1800px;
+  max-width: 1220px;
   margin: 0 15px;
   font-size: 0;
   /* Hide whitespace between elements */
@@ -5156,7 +5136,7 @@ span.moj-header__link:hover {
   @media (min-width: 40.0625em) {
     .moj-identity-bar__container {
       margin: 0 30px; } }
-  @media (min-width: 1860px) {
+  @media (min-width: 1280px) {
     .moj-identity-bar__container {
       margin: 0 auto; } }
   .moj-identity-bar__container:after {
@@ -5671,14 +5651,14 @@ span.moj-header__link:hover {
   background-color: #f3f2f1; }
 
 .moj-primary-navigation__container {
-  max-width: 1800px;
+  max-width: 1220px;
   margin: 0 15px;
   font-size: 0;
   text-align: justify; }
   @media (min-width: 40.0625em) {
     .moj-primary-navigation__container {
       margin: 0 30px; } }
-  @media (min-width: 1860px) {
+  @media (min-width: 1280px) {
     .moj-primary-navigation__container {
       margin: 0 auto; } }
   .moj-primary-navigation__container:after {
@@ -6638,12 +6618,12 @@ span.moj-header__link:hover {
   display: none; }
 
 .moj-width-container {
-  max-width: 1800px;
+  max-width: 1220px;
   margin: 0 15px; }
   @media (min-width: 40.0625em) {
     .moj-width-container {
       margin: 0 30px; } }
-  @media (min-width: 1860px) {
+  @media (min-width: 1280px) {
     .moj-width-container {
       margin: 0 auto; } }
 
