Added BDD tests
Signed-off-by: Paul Massey <paul.massey@scriptwerx.io>

--- a/views/case-list.njk
+++ b/views/case-list.njk
@@ -67,7 +67,7 @@
       {{ govukTable(tableData) }}
     {% endblock %}
   {% else %}
-    <p class="govuk-body">No case data available for today.</p>
+    <p class="govuk-body">No case data available for this day.</p>
   {% endif %}
 
 {% endblock %}
