Changed copy as per changes made by Alistair
Signed-off-by: Paul Massey <paul.massey@scriptwerx.io>

--- a/views/case-list.njk
+++ b/views/case-list.njk
@@ -1,7 +1,7 @@
 {% set tableData = {
   head: [
     { text: "Defendant" },
-    { text: "Probation record" },
+    { text: "Probation status" },
     { text: "Offence" },
     { text: "Listing" },
     { text: "Session" },
