Corrected failing tests
Signed-off-by: Paul Massey <paul.massey@scriptwerx.io>

--- a/views/case-list.njk
+++ b/views/case-list.njk
@@ -27,7 +27,7 @@
     { text: item.probationStatus },
     { text: offences | join('') | safe },
     { text: caseData.listno + ' listing' },
-    { text: item.session },
+    { text: item.session | capitalize },
     { text: item.courtRoom }
   ]) }}
 {% endfor %}
