--- a/views/case-list.njk
+++ b/views/case-list.njk
@@ -26,7 +26,7 @@
     { text: ('<a href="#" class="govuk-link govuk-link--no-visited-state">' + caseData.def_name | escape + '</a>') | safe },
     { text: item.probationStatus },
     { text: offences | join('') | safe },
-    { text: caseData.listno + ' listing' },
+    { text: caseData.listno },
     { text: item.session | capitalize },
     { text: item.courtRoom }
   ]) }}
