--- a/views/case-list.njk
+++ b/views/case-list.njk
@@ -40,8 +40,17 @@
     {{ title }}
   </h1>
 
+  {%  set today = params.moment().format('YYYY-MM-DD') %}
+  {%  set tomorrow = params.moment().add(1, 'days').format('YYYY-MM-DD') %}
+  {%  set dayAfter = params.moment().add(2, 'days').format('YYYY-MM-DD') %}
+
   {% if params.date === today or params.date === tomorrow or params.date === dayAfter %}
     {% block subnavigation %}
+
+      {%  set todayLong = params.moment(today).format('dddd, D MMMM YYYY') %}
+      {%  set tomorrowLong = params.moment(tomorrow).format('dddd, D MMMM YYYY') %}
+      {%  set dayAfterLong = params.moment(dayAfter).format('dddd, D MMMM YYYY') %}
+
       {%- from "moj/components/sub-navigation/macro.njk" import mojSubNavigation -%}
       {{ mojSubNavigation({
         label: 'Sub navigation',
