PIC-205: - Add nodemon for file watching - Render last updated date to case list

--- a/views/case-list.njk
+++ b/views/case-list.njk
@@ -43,6 +43,7 @@
   {%  set today = params.moment().format('YYYY-MM-DD') %}
   {%  set tomorrow = params.moment().add(1, 'days').format('YYYY-MM-DD') %}
   {%  set dayAfter = params.moment().add(2, 'days').format('YYYY-MM-DD') %}
+  {%  set lastUpdated = params.moment(params.lastUpdated).format('[Last updated] dddd, D MMMM YYYY [at] hh:mm') %}
 
   {% if params.date === today or params.date === tomorrow or params.date === dayAfter %}
     {% block subnavigation %}
@@ -70,6 +71,8 @@
       }) }}
     {% endblock %}
   {% endif %}
+
+  <p>{{ lastUpdated }}</p>
 
   {% if tableData.rows | length %}
     {% block table %}
