--- a/views/partials/layout.njk
+++ b/views/partials/layout.njk
@@ -86,6 +86,7 @@
 {% endblock %}
 
 {% block bodyEnd %}
+  <script src="/moj/all.js"></script>
   <script src="/govuk/all.js"></script>
   <script>window.GOVUKFrontend.initAll()</script>
 {% endblock %}
