Page should be integer
Improved health check middleware code comment

Signed-off-by: Paul Massey <paul.massey@scriptwerx.io>

--- a/views/case-list.njk
+++ b/views/case-list.njk
@@ -43,7 +43,7 @@
   } %}
 {% endif %}
 
-{% if params.page === totalPages %}
+{% if (params.page | int) === totalPages %}
   {% set nextLink = null %}
 {% else %}
   {% set nextLink = {
