Page should be integer
Improved health check middleware code comment

Signed-off-by: Paul Massey <paul.massey@scriptwerx.io>

--- a/views/case-list.njk
+++ b/views/case-list.njk
@@ -57,7 +57,7 @@
   {{ pageItems.push({
     text: i,
     href: '?page=' + i,
-    selected: params.page === (i | string)
+    selected: (params.page | int) === i
   }) }}
 {%- endfor %}
 
