--- a/views/case-list.njk
+++ b/views/case-list.njk
@@ -32,32 +32,32 @@
   ]) }}
 {% endfor %}
 
-{% set totalPages = (params.total / params.limit) | round(0, "ceil") | string %}
+{% set totalPages = (params.total / params.limit) | round(0, "ceil") %}
 
-{% if (params.page | int) === 1 %}
+{% if params.page === 1 %}
   {% set previousLink = null %}
 {% else %}
   {% set previousLink = {
     text: 'Previous',
-    href: '?page=' + ((params.page | int) - 1)
+    href: '?page=' + (params.page - 1)
   } %}
 {% endif %}
 
-{% if (params.page | int) === totalPages %}
+{% if params.page === totalPages %}
   {% set nextLink = null %}
 {% else %}
   {% set nextLink = {
     text: 'Next',
-    href: '?page=' + ((params.page | int) + 1)
+    href: '?page=' + (params.page + 1)
   } %}
 {% endif %}
 
 {% set pageItems = [] %}
-{% for i in range(1, (totalPages | int) + 1) -%}
+{% for i in range(1, totalPages + 1) -%}
   {{ pageItems.push({
     text: i,
     href: '?page=' + i,
-    selected: (params.page | int) === i
+    selected: params.page === i
   }) }}
 {%- endfor %}
 
