Updated mappings and corresponding tests
Updated dependencies

Signed-off-by: Paul Massey <paul.massey@digital.justice.gov.uk>

--- a/views/case-list.njk
+++ b/views/case-list.njk
@@ -11,7 +11,7 @@
 } %}
 
 {% for item in data %}
-  {% set caseData = item.data %}
+  {% set caseData = item.data | json %}
   {% set offences = [] %}
   {% if caseData.offences.offence.title %}
     {{ offences.push(caseData.offences.offence.title | escape) }}
