PIC-206: Added display for previously known termination date

--- a/views/case-list.njk
+++ b/views/case-list.njk
@@ -24,7 +24,7 @@
   {% endif %}
   {{ tableData.rows.push([
     { text: ('<a href="#" class="govuk-link govuk-link--no-visited-state">' + caseData.def_name | escape + '</a>') | safe },
-    { text: item.probationStatus },
+    { text: (item.probationStatus + ('<span data-cy="previously-known-termination-date" class="govuk-caption-m">Order ended ' + params.moment(item.previouslyKnownTerminationDate).format("D MMMM YYYY") | escape + '</span>' if item.previouslyKnownTerminationDate)) | safe },
     { text: offences | join('') | safe },
     { text: caseData.listno },
     { text: item.session | capitalize },
