Included cased summary screen and relevant routes
Signed-off-by: Paul Massey <paul.massey@digital.justice.gov.uk>

--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -1,6 +1,6 @@
 $govuk-page-width: 1220px;
 $moj-page-width: $govuk-page-width;
-$govuk-brand-colour: #204060;
+// $govuk-brand-colour: #204060;
 
 @import "node_modules/govuk-frontend/govuk/all";
 @import "node_modules/@ministryofjustice/frontend/moj/all";
