--- a/views/case-summary-person.njk
+++ b/views/case-summary-person.njk
@@ -1,11 +1,128 @@
 {% extends "partials/case-details.njk" %}
 
+{%- set probationData = data.probationData -%}
+{%- set caseData = data.caseData -%}
+
 {% block caseContent %}
 
     <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds">
 
             <h2 class="govuk-heading-m">Defendant details</h2>
+
+            <table class="govuk-table">
+                <tbody class="govuk-table__body">
+                <tr class="govuk-table__row">
+                    <th scope="col" class="govuk-table__header govuk-!-width-one-half">Name</th>
+                    <td class="govuk-table__cell govuk-!-width-one-half">{{ caseData.def_name }}</td>
+                </tr>
+                <tr class="govuk-table__row">
+                    <th scope="col" class="govuk-table__header">Gender</th>
+                    <td class="govuk-table__cell">{% if caseData.def_sex === "F" %}Female{% elif caseData.def_sex === "M" %}Male{% else %}Unknown{% endif %}</td>
+                </tr>
+                <tr class="govuk-table__row">
+                    <th scope="col" class="govuk-table__header">Date of birth</th>
+                    <td class="govuk-table__cell">{{ params.moment(caseData.def_dob, 'DD-MM-YYYY').format('D MMMM YYYY') }}</td>
+                </tr>
+                <tr class="govuk-table__row">
+                    <th scope="col" class="govuk-table__header">Address</th>
+                    <td class="govuk-table__cell">
+                        {%- set address = caseData.def_addr -%}
+                        {% if address.line1 %}{{ address.line1 }}<br/>{% endif %}
+                        {% if address.line2 %}{{ address.line2 }}<br/>{% endif %}
+                        {% if address.line3 %}{{ address.line3 }}<br/>{% endif %}
+                        {% if address.line4 %}{{ address.line4 }}<br/>{% endif %}
+                        {% if address.line5 %}{{ address.line5 }}<br/>{% endif %}
+                        {% if address.pcode %}{{ address.pcode | upper }}{% endif %}
+                    </td>
+                </tr>
+                <tr class="govuk-table__row">
+                    <th scope="col" class="govuk-table__header">Nationality</th>
+                    <td class="govuk-table__cell">{{ caseData.nationality_1 or "Unknown" }}{{ " / " + caseData.nationality_2 if caseData.nationality_2 }}</td>
+                </tr>
+                </tbody>
+            </table>
+
+            {% if data.probationStatus !== 'No record' %}
+
+                <h2 class="govuk-heading-m govuk-!-margin-top-8">Offender record details</h2>
+
+                <table class="govuk-table">
+                    <tbody class="govuk-table__body">
+                    <tr class="govuk-table__row">
+                        <th scope="col" class="govuk-table__header govuk-!-width-one-half">Aliases</th>
+                        <td class="govuk-table__cell govuk-!-width-one-half">{{ "Yes (" + probationData.offenderAliases | length + ")" if probationData.offenderAliases | length else "No" }}</td>
+                    </tr>
+                    <tr class="govuk-table__row">
+                        <th scope="col" class="govuk-table__header">NI Number</th>
+                        <td class="govuk-table__cell">{{ probationData.otherIds.niNumber or "Unknown" }}</td>
+                    </tr>
+                    <tr class="govuk-table__row">
+                        <th scope="col" class="govuk-table__header">Ethnicity</th>
+                        <td class="govuk-table__cell">{{ probationData.offenderProfile.ethnicity or "Unknown" }}</td>
+                    </tr>
+                    <tr class="govuk-table__row">
+                        <th scope="col" class="govuk-table__header">Interpreter required</th>
+                        <td class="govuk-table__cell">{{ "Yes" if probationData.offenderProfile.offenderLanguages.requiresInterpreter === true else "No" }}</td>
+                    </tr>
+                    <tr class="govuk-table__row">
+                        <th scope="col" class="govuk-table__header">Disability status</th>
+                        <td class="govuk-table__cell">
+                            {% if probationData.offenderProfile.disabilities | length %}
+                                {%- for disability in probationData.offenderProfile.disabilities if probationData.offenderProfile.disabilities | length %}
+                                    {{ disability.disabilityType.description }}<br/>
+                                {% endfor -%}
+                            {% else %}
+                                Unknown
+                            {% endif %}
+                        </td>
+                    </tr>
+                    <tr class="govuk-table__row">
+                        <th scope="col" class="govuk-table__header">Telephone</th>
+                        <td class="govuk-table__cell">
+                            {%- set telNumber = "Unknown" -%}
+                                {%- for phone in probationData.contactDetails.phoneNumbers %}
+                                    {% if phone.type === 'TELEPHONE' and telNumber === 'Unknown' %}
+                                        {%- set telNumber = phone.number -%}
+                                    {% endif %}
+                                {% endfor -%}
+                            {{ telNumber }}
+                        </td>
+                    </tr>
+                    <tr class="govuk-table__row">
+                        <th scope="col" class="govuk-table__header">Email</th>
+                        <td class="govuk-table__cell">{{ probationData.contactDetails.emailAddresses[0] or "Unknown" }}</td>
+                    </tr>
+                    <tr class="govuk-table__row">
+                        <th scope="col" class="govuk-table__header">Mobile</th>
+                        <td class="govuk-table__cell">
+                            {%- set mobileNumber = "Unknown" -%}
+                                {%- for phone in probationData.contactDetails.phoneNumbers %}
+                                    {% if phone.type === 'MOBILE' and mobileNumber === 'Unknown' %}
+                                        {%- set mobileNumber = phone.number -%}
+                                    {% endif %}
+                                {% endfor -%}
+                            {{ mobileNumber }}
+                        </td>
+                    </tr>
+                    <tr class="govuk-table__row">
+                        <th scope="col" class="govuk-table__header">Address</th>
+                        <td class="govuk-table__cell">
+                            {% if probationData.contactDetails.addresses | length %}
+                                {%- set address = probationData.contactDetails.addresses[0] -%}
+                                {% if address.buildingName %}{{ address.buildingName }}<br/>{% endif %}
+                                {% if address.addressNumber %}{{ address.addressNumber }}{% endif %}
+                                {% if address.streetName %}{{ address.streetName }}<br/>{% endif %}
+                                {% if address.town %}{{ address.town }}<br/>{% endif %}
+                                {% if address.district %}{{ address.district }}<br/>{% endif %}
+                                {% if address.county %}{{ address.county }}<br/>{% endif %}
+                                {% if address.postcode %}{{ address.postcode }}{% endif %}
+                            {% endif %}
+                        </td>
+                    </tr>
+                    </tbody>
+                </table>
+            {% endif %}
 
         </div>
         <div class="govuk-grid-column-one-third">&nbsp;</div>
