--- a/views/components/key-details-bar/template.njk
+++ b/views/components/key-details-bar/template.njk
@@ -7,7 +7,7 @@
       {% endif %}
       {% if params.alerts | length %}
         {% for alert in params.alerts %}
-          <span class="pac-key-details-bar__status govuk-!-margin-left-2" role="{% if alert.important %}alert{% else %}status{% endif %}">
+          <span class="pac-key-details-bar__status govuk-!-margin-left-2" role="status">
             <span class="govuk-visually-hidden">{{ alert.description }} </span>{{ alert.title }}
           </span>
         {% endfor %}
