--- a/views/partials/case-details.njk
+++ b/views/partials/case-details.njk
@@ -7,7 +7,7 @@
     href: '/case/' + data.caseNo + '/details',
     active: title === 'Case details'
 }, {
-    text: 'Person',
+    text: 'Personal details',
     href: '/case/' + data.caseNo + '/person',
     active: title === 'Person'
 }] %}
