Proibation record view
Included convictions/event data

Signed-off-by: Paul Massey <paul.massey@digital.justice.gov.uk>

--- a/views/partials/case-details.njk
+++ b/views/partials/case-details.njk
@@ -9,7 +9,7 @@
 }, {
     text: 'Personal details',
     href: '/case/' + data.caseNo + '/person',
-    active: title === 'Person'
+    active: title === 'Personal details'
 }] %}
 
 {% if data.probationStatus !== 'No record' %}
