--- a/views/case-summary-record.njk
+++ b/views/case-summary-record.njk
@@ -1,11 +1,74 @@
 {% extends "partials/case-details.njk" %}
 
+{%- set activeOrders = [] -%}
+{%- set previousOrders = [] -%}
+{%- for order in data.communityData.convictions if data.communityData.convictions | length %}
+    {% if order.active %}
+        {{ activeOrders.push(order) }}
+    {% else %}
+        {{ previousOrders.push(order) }}
+    {% endif %}
+{% endfor -%}
+
 {% block caseContent %}
 
     <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds">
 
-            <h2 class="govuk-heading-m">Probation record</h2>
+            {% if activeOrders | length %}
+                <h2 class="govuk-heading-m">Current orders ({{ activeOrders | length }})</h2>
+                {%- for order in activeOrders %}
+                    {% if order.sentence %}
+                        <p class="govuk-body govuk-!-margin-bottom-0"><a href="#" class="govuk-link govuk-link--no-visited-state govuk-!-font-weight-bold">{{ order.sentence.description }}</a></p>
+                        <p class="govuk-body govuk-!-margin-top-1 govuk-!-margin-bottom-0">{{ order.offences[0].detail.description }}</p>
+                        <p class="govuk-hint govuk-!-margin-top-1 govuk-!-margin-bottom-0">Started on {{ params.moment(order.referralDate, 'YYYY-MM-DD').format('D MMM YYYY') }}</p>
+
+                        <table class="govuk-table govuk-!-margin-top-4">
+                            <thead class="govuk-table__head">
+                                <tr class="govuk-table__row">
+                                    <th scope="col" class="govuk-table__header">Requirement</th>
+                                    <th scope="col" class="govuk-table__header">Length</th>
+                                </tr>
+                            </thead>
+                            <tbody class="govuk-table__body">
+                                <tr class="govuk-table__row">
+                                    <td class="govuk-table__cell">Rehabilitation Activity Requirement (RAR)</td>
+                                    <td class="govuk-table__cell">20 days</td>
+                                </tr>
+                                <tr class="govuk-table__row">
+                                    <td class="govuk-table__cell">Court - Accredited Programme - Building Better Relationships (BBR)</td>
+                                    <td class="govuk-table__cell">-</td>
+                                </tr>
+                                <tr class="govuk-table__row">
+                                    <td class="govuk-table__cell">Unpaid Work - Regular</td>
+                                    <td class="govuk-table__cell">40 hours</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    {% endif %}
+                {% endfor -%}
+            {% endif %}
+
+            {% if previousOrders | length %}
+                <h2 class="govuk-heading-m{% if activeOrders | length and previousOrders | length %} govuk-!-margin-top-8{% endif %}">Previous orders ({{ previousOrders | length }})</h2>
+                <table class="govuk-table">
+                    <tbody class="govuk-table__body">
+                        {%- for order in previousOrders %}
+                            {% if order.sentence %}
+                            <tr class="govuk-table__row">
+                                <td class="govuk-table__cell govuk-!-width-two-thirds">
+                                    <p class="govuk-body govuk-!-margin-bottom-0"><a href="#" class="govuk-link govuk-link--no-visited-state govuk-!-font-weight-bold">{{ order.sentence.description }}</a></p>
+                                    <p class="govuk-hint govuk-!-margin-top-0 govuk-!-margin-bottom-0">{{ order.offences[0].detail.description }}</p>
+                                </td>
+                                <td class="govuk-table__cell govuk-table__cell--numeric govuk-!-width-one-third" style="vertical-align: bottom">
+                                    <p class="govuk-hint govuk-!-margin-bottom-0">Ended on {{ params.moment(order.referralDate, 'YYYY-MM-DD').format('D MMM YYYY') }}</p>
+                                </td>
+                            </tr>
+                            {% endif %}
+                        {% endfor -%}
+                    </tbody>
+                </table>
+            {% endif %}
 
         </div>
         <div class="govuk-grid-column-one-third">&nbsp;</div>
