--- a/views/partials/layout.njk
+++ b/views/partials/layout.njk
@@ -68,7 +68,7 @@
       {
         text: 'Cases',
         href: '/cases',
-        active: title === 'Cases' or title === 'Case details' or title === 'Person' or title === 'Probation record' or title === 'Risk registers'
+        active: title === 'Cases' or title === 'Case details' or title === 'Personal details' or title === 'Probation record' or title === 'Risk registers'
       }
     ]
   }) }}
