--- a/views/case-summary-record.njk
+++ b/views/case-summary-record.njk
@@ -86,6 +86,14 @@
             {% if offenderManager.active %}
                 <p class="govuk-body govuk-!-margin-bottom-0">{{ offenderManager.staff.forenames }} {{ offenderManager.staff.surname }}</p>
                 <p class="govuk-hint govuk-!-margin-top-1">Allocated on {{ params.moment(offenderManager.fromDate, 'YYYY-MM-DD').format('D MMM YYYY') }}</p>
+
+                <p class="govuk-body govuk-!-margin-0">{{ offenderManager.probationArea.description }}</p>
+                <p class="govuk-body govuk-!-margin-0">{{ offenderManager.address.buildingName }}</p>
+                <p class="govuk-body govuk-!-margin-0">{{ offenderManager.address.addressNumber }} {{ offenderManager.address.streetName }}</p>
+                <p class="govuk-body govuk-!-margin-0">{{ offenderManager.address.town }}</p>
+                <p class="govuk-body govuk-!-margin-0">{{ offenderManager.address.county }}</p>
+                <p class="govuk-body govuk-!-margin-top-0">{{ offenderManager.address.postcode }}</p>
+
                 <p class="govuk-body">Telephone: {{ offenderManager.team.telephone }}</p>
             {% else %}
                 <p class="govuk-body">Not active</p>
