--- a/public/stylesheets/app/_badge.scss
+++ b/public/stylesheets/app/_badge.scss
@@ -3,9 +3,9 @@
   display: block;
   text-align: center;
   margin-bottom: 3px;
+  margin-right: 10px!important;
   @include govuk-media-query($from: tablet) {
     display: inline-block;
-    padding: 0 10px;
     &:not(:last-child) {
       margin-right: 3px;
     }
